--- a/src/assets/design-system/variables/components/input-and-actions/_button.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_button.scss
@@ -24,47 +24,47 @@ $button-outline: var(--brand-focused);
 $button-variations: (
   'primary': (
     'bg': var(--brand-interaction-primary-enabled),
-    'color': var(--brand-text-color-inverse-high),
+    'color': var(--brand-text-inverse-high),
     'hover-bg': var(--brand-interaction-primary-hovered),
-    'hover-color': var(--brand-text-color-inverse-high),
+    'hover-color': var(--brand-text-inverse-high),
     'active-bg': var(--brand-interaction-primary-activated),
-    'active-color': var(--brand-text-color-inverse-high),
+    'active-color': var(--brand-text-inverse-high),
     'focus-bg': var(--brand-interaction-primary-enabled),
-    'focus-color': var(--brand-text-color-inverse-high),
+    'focus-color': var(--brand-text-inverse-high),
     'focus-box-shadow-color': palette-color-level('primary', 3),
   ),
-  'basic': (
-    'bg': palette-color-level('primary', 2),
-    'color': palette-color-level('primary', 7),
-    'hover-bg': palette-color-level('primary', 1),
-    'hover-color': palette-color-level('primary', 7),
-    'active-bg': palette-color-level('primary', 3),
-    'active-color': palette-color-level('primary', 7),
-    'focus-bg': palette-color-level('primary', 2),
-    'focus-color': palette-color-level('primary', 7),
+  'secondary': (
+    'bg': var(--brand-interaction-secondary-enabled),
+    'color': var(--brand-text-info),
+    'hover-bg': var(--brand-interaction-secondary-hovered),
+    'hover-color': var(--brand-text-info),
+    'active-bg': var(--brand-interaction-secondary-activated),
+    'active-color': var(--brand-text-info),
+    'focus-bg': var(--brand-interaction-secondary-enabled),
+    'focus-color': var(--brand-text-info),
     'focus-box-shadow-color': palette-color-level('primary', 3),
   ),
   'outline': (
     'bg': var(--brand-interaction-neutral-enabled),
-    'color': var(--brand-text-color-default-medium),
+    'color': var(--brand-text-default-medium),
     'hover-bg': var(--brand-interaction-neutral-hovered),
-    'hover-color': var(--brand-text-color-default-medium),
+    'hover-color': var(--brand-text-default-medium),
     'active-bg': var(--brand-interaction-neutral-activated),
-    'active-color': var(--brand-text-color-default-medium),
+    'active-color': var(--brand-text-default-medium),
     'focus-bg': var(--brand-interaction-neutral-enabled),
-    'focus-color': var(--brand-text-color-default-medium),
+    'focus-color': var(--brand-text-default-medium),
     'focus-box-shadow-color': palette-color-level('primary', 3),
-    'border': 1px solid var(--brand-border-color-default-high),
+    'border': 1px solid var(--brand-border-default-high),
   ),
   'danger': (
     'bg': var(--brand-interaction-danger-enabled),
-    'color': var(--brand-text-color-inverse-high),
+    'color': var(--brand-text-inverse-high),
     'hover-bg': var(--brand-interaction-danger-hovered),
-    'hover-color': var(--brand-text-color-inverse-high),
+    'hover-color': var(--brand-text-inverse-high),
     'active-bg': var(--brand-interaction-danger-activated),
-    'active-color': var(--brand-text-color-inverse-high),
+    'active-color': var(--brand-text-inverse-high),
     'focus-bg': var(--brand-interaction-danger-enabled),
-    'focus-color': var(--brand-text-color-inverse-high),
+    'focus-color': var(--brand-text-inverse-high),
     'focus-box-shadow-color': palette-color-level('danger', 3),
   ),
 );
