--- a/src/assets/design-system/variables/components/input-and-actions/_select.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_select.scss
@@ -6,11 +6,11 @@ $select-label-gap: $space-4;
 
 // input default
 $select-border-radius: var(--brand-border-radius-md);
-$select-border: 1px solid var(--brand-border-color-default-high);
+$select-border: 1px solid var(--brand-border-default-high);
 $select-height: $space-40;
 $select-padding: ($space-12 - $space-2) $space-12;
-$select-color: var(--brand-text-color-default-high);
-$select-placeholder-color: var(--brand-text-color-default-low);
+$select-color: var(--brand-text-default-high);
+$select-placeholder-color: var(--brand-text-default-low);
 $select-background-color: transparent;
 $select-font-family: $font-family;
 $select-font-size: $text-1;
@@ -27,18 +27,18 @@ $select-disabled-disabled-opacity: 0.3;
 $select-outline: var(--brand-focused);
 
 // hover
-$select-border-hover: 1px solid var(--brand-border-color-default-high);
+$select-border-hover: 1px solid var(--brand-border-default-high);
 
 // error
-$select-bg-error: var(--brand-surface-color-danger);
-$select-border-error: 1px solid var(--brand-border-color-danger-high);
+$select-bg-error: var(--brand-surface-danger);
+$select-border-error: 1px solid var(--brand-border-danger-high);
 
 // leading icon
 $select-leading-width: $space-40 - $space-4;
 $select-leading-icon-size: $space-20;
-$select-leading-color: var(--brand-text-color-default-high);
+$select-leading-color: var(--brand-text-default-high);
 
 // trailing icon
 $select-trailing-width: $space-40 - $space-4;
 $select-trailing-icon-size: $space-20;
-$select-trailing-color: var(--brand-text-color-default-high);
+$select-trailing-color: var(--brand-text-default-high);
