--- a/src/assets/design-system/variables/components/input-and-actions/_toggle.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_toggle.scss
@@ -1,15 +1,15 @@
 // toggle states
 // default
-$toggle-bg: var(--brand-surface-color-default-low);
-$toggle-handle-bg: var(--brand-text-color-default-high);
+$toggle-bg: var(--brand-surface-default-low);
+$toggle-handle-bg: var(--brand-text-default-high);
 
 // hover
-$toggle-bg-hover: var(--brand-surface-color-default-low);
-$toggle-handle-bg-hover: var(--brand-text-color-default-high);
+$toggle-bg-hover: var(--brand-surface-default-low);
+$toggle-handle-bg-hover: var(--brand-text-default-high);
 
 // checked
-$toggle-bg-checked: var(--brand-border-color-info-low);
-$toggle-handle-bg-checked: var(--brand-text-color-info);
+$toggle-bg-checked: var(--brand-border-info-low);
+$toggle-handle-bg-checked: var(--brand-text-info);
 
 $toggle-width: $space-32;
 $toggle-height: $space-16;
