--- a/src/assets/design-system/variables/_color-palette.scss
+++ b/src/assets/design-system/variables/_color-palette.scss
@@ -1,55 +1,55 @@
 $palette-colors: (
-  'primary-1': #edf5ff,
-  'primary-2': #d0e2ff,
-  'primary-3': #a6c8ff,
-  'primary-4': #78a9ff,
-  'primary-5': #4589ff,
-  'primary-6': #0f62fe,
-  'primary-7': #0043ce,
-  'primary-8': #002d9c,
-  'primary-9': #001d6c,
-  'primary-10': #001141,
+  'primary-1': #e8f2ff,
+  'primary-2': #cfe0ff,
+  'primary-3': #9ec0ff,
+  'primary-4': #7aa7ff,
+  'primary-5': #4c82ff,
+  'primary-6': #2b6bff,
+  'primary-7': #2056e8,
+  'primary-8': #1945bf,
+  'primary-9': #0f3191,
+  'primary-10': #061c57,
   'neutral-0': #fff,
-  'neutral-1': #f2f4f8,
-  'neutral-2': #dde1e6,
-  'neutral-3': #c1c7cd,
-  'neutral-4': #a2a9b0,
-  'neutral-5': #878d96,
-  'neutral-6': #70767d,
-  'neutral-7': #4d5358,
-  'neutral-8': #343a3f,
-  'neutral-9': #21272a,
-  'neutral-10': #121619,
-  'danger-1': #fff1f1,
-  'danger-2': #ffd7d9,
-  'danger-3': #ffb3b8,
-  'danger-4': #ff8389,
-  'danger-5': #fa4d56,
-  'danger-6': #da1e28,
-  'danger-7': #a2191f,
-  'danger-8': #750e13,
-  'danger-9': #520408,
-  'danger-10': #2d0709,
+  'neutral-1': #f1f1f3,
+  'neutral-2': #e0e0e2,
+  'neutral-3': #cacbcc,
+  'neutral-4': #afb0b2,
+  'neutral-5': #98999c,
+  'neutral-6': #626469,
+  'neutral-7': #4b4d50,
+  'neutral-8': #38393b,
+  'neutral-9': #262728,
+  'neutral-10': #171717,
+  'danger-1': #ffe9e8,
+  'danger-2': #ffd1cc,
+  'danger-3': #f5b0a6,
+  'danger-4': #f28777,
+  'danger-5': #e55c47,
+  'danger-6': #d4422f,
+  'danger-7': #ba3223,
+  'danger-8': #99251a,
+  'danger-9': #99251a,
+  'danger-10': #38110f,
   'warning-1': #fff9e5,
   'warning-2': #fff0ba,
-  'warning-3': #ffe482,
-  'warning-4': #ffd333,
-  'warning-5': #e8b911,
-  'warning-6': #c39900,
-  'warning-7': #9a7900,
-  'warning-8': #6d5500,
-  'warning-9': #493901,
-  'warning-10': #272006,
-  'success-1': #defbe6,
-  'success-2': #a7f0ba,
-  'success-3': #6fdc8c,
-  'success-4': #42be65,
-  'success-5': #24a148,
-  'success-6': #198038,
-  'success-7': #0e6027,
-  'success-8': #044317,
-  'success-9': #022d0d,
-  'success-10': #071908,
+  'warning-3': #f9e27d,
+  'warning-4': #f0cb37,
+  'warning-5': #d9a50c,
+  'warning-6': #bf8f32,
+  'warning-7': #9e772b,
+  'warning-8': #7a5f28,
+  'warning-9': #4f3d0f,
+  'warning-10': #2b2205,
+  'success-1': #e0f5ed,
+  'success-2': #9dedca,
+  'success-3': #65dbb0,
+  'success-4': #49bf88,
+  'success-5': #0f9f5f,
+  'success-6': #228755,
+  'success-7': #117345,
+  'success-8': #0c5e39,
+  'success-9': #0c422b,
+  'success-10': #02261b,
 );
 
 @function palette-color($key) {
@@ -60,4 +60,3 @@ $palette-colors: (
   $color: palette-color($color-name + '-' + $level);
   @return $color;
 }
-// 393d47
