--- a/src/assets/design-system/variables/_color-palette.scss
+++ b/src/assets/design-system/variables/_color-palette.scss
@@ -1,50 +1,50 @@
 $palette-colors: (
-  'primary-1': #e8f2ff,
+  'primary-1': #eaf1fe,
   'primary-2': #cfe0ff,
-  'primary-3': #9ec0ff,
-  'primary-4': #7aa7ff,
-  'primary-5': #4c82ff,
+  'primary-3': #a1c2ff,
+  'primary-4': #739dff,
+  'primary-5': #4782ff,
   'primary-6': #2b6bff,
   'primary-7': #2056e8,
   'primary-8': #1945bf,
   'primary-9': #0f3191,
   'primary-10': #061c57,
   'neutral-0': #fff,
-  'neutral-1': #f1f1f3,
-  'neutral-2': #e0e0e2,
-  'neutral-3': #cacbcc,
-  'neutral-4': #afb0b2,
-  'neutral-5': #98999c,
-  'neutral-6': #626469,
-  'neutral-7': #4b4d50,
-  'neutral-8': #38393b,
-  'neutral-9': #262728,
-  'neutral-10': #171717,
-  'danger-1': #ffe9e8,
-  'danger-2': #ffd1cc,
-  'danger-3': #f5b0a6,
-  'danger-4': #f28777,
-  'danger-5': #e55c47,
+  'neutral-1': #f1f3f5,
+  'neutral-2': #e8eaed,
+  'neutral-3': #d7dbdf,
+  'neutral-4': #c1c8cd,
+  'neutral-5': #889096,
+  'neutral-6': #6d757a,
+  'neutral-7': #555c61,
+  'neutral-8': #3f4447,
+  'neutral-9': #282c2e,
+  'neutral-10': #0e1214,
+  'danger-1': #ffefef,
+  'danger-2': #fddcd8,
+  'danger-3': #f3b7ae,
+  'danger-4': #f28d7e,
+  'danger-5': #eb604b,
   'danger-6': #d4422f,
   'danger-7': #ba3223,
   'danger-8': #99251a,
   'danger-9': #75140d,
   'danger-10': #38110f,
-  'warning-1': #fff9e5,
-  'warning-2': #fff0ba,
-  'warning-3': #f9e27d,
-  'warning-4': #f0cb37,
-  'warning-5': #d9a50c,
+  'warning-1': #fffbd1,
+  'warning-2': #fef2a4,
+  'warning-3': #f0d678,
+  'warning-4': #f0c51a,
+  'warning-5': #dba70c,
   'warning-6': #bf8f32,
   'warning-7': #9e772b,
   'warning-8': #7a5f28,
   'warning-9': #4f3d0f,
   'warning-10': #2b2205,
-  'success-1': #e0f5ed,
-  'success-2': #9dedca,
-  'success-3': #65dbb0,
-  'success-4': #49bf88,
-  'success-5': #0f9f5f,
+  'success-1': #e9f9ee,
+  'success-2': #ccebd7,
+  'success-3': #92ceac,
+  'success-4': #5bb98c,
+  'success-5': #30a46c,
   'success-6': #228755,
   'success-7': #117345,
   'success-8': #0c5e39,
