refactor: add common scss variables for input sizes

--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -6,6 +6,7 @@
 @import 'typography';
 @import 'breakpoints';
 /* Components */
+@import 'components/common';
 @import 'components/data-display/accordion';
 @import 'components/data-display/badge';
 @import 'components/navigation/breadcrumb';
