feat(components): add LandingPageHeader

--- a/src/assets/design-system/mixins/_mixins.scss
+++ b/src/assets/design-system/mixins/_mixins.scss
@@ -58,7 +58,7 @@ $grid-breakpoints-max: (
 }
 
 /**
- USAGE:
+ USAGE (only in SCSS files, not .vue files):
 
  @include add-theme-variable(
   variable-name,
