--- a/src/assets/design-system/variables/components/_common.scss
+++ b/src/assets/design-system/variables/components/_common.scss
@@ -2,3 +2,11 @@
 $input-control-sm-height: $space-24 + $space-4;
 $input-control-md-height: $space-40;
 $input-control-lg-height: $space-40 + $space-4;
+
+@include add-theme-variable(
+  'a11y-color',
+  (
+    'light': var(--brand-text-inverse-high),
+    'dark': var(--brand-text-default-high),
+  )
+);
