--- a/.vuesion/generators/component/component.stories.ts.hbs
+++ b/.vuesion/generators/component/component.stories.ts.hbs
@@ -1,4 +1,5 @@
 import { storiesOf } from '@storybook/vue';
+import ComponentDocs from '@/assets/design-system/docs/components/ComponentDocs.vue';
 import {{ properCase componentName }} from './{{ properCase componentName }}.vue';
 
 const story = storiesOf('{{ properCase componentName }}', module) as any;
@@ -6,8 +7,14 @@ const story = storiesOf('{{ properCase componentName }}', module) as any;
 story.add(
   'Default',
   () => ({
-    components: { {{ properCase componentName }} },
-    template: `<{{ kebabCase componentName }}>{{ properCase componentName }}</{{ kebabCase componentName }}>`,
+    components: { ComponentDocs, {{ properCase componentName }} },
+    template: `<component-docs
+      component-name="Landing page header"
+      usage="TBD"
+      story="TBD"
+    >
+      <{{ kebabCase componentName }}>{{ properCase componentName }}</{{ kebabCase componentName }}>
+    </component-docs>`,
   }),
   {
     info: {
