feat(components): add Testimonials

--- a/.vuesion/generators/component/component.stories.ts.hbs
+++ b/.vuesion/generators/component/component.stories.ts.hbs
@@ -9,7 +9,7 @@ story.add(
   () => ({
     components: { ComponentDocs, {{ properCase componentName }} },
     template: `<component-docs
-      component-name="Landing page header"
+      component-name="{{ properCase componentName }}"
       usage="TBD"
       story="TBD"
     >
