--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -116,15 +116,16 @@ img:not([alt]) {
 
   &:after {
     position: absolute;
-    top: 100%;
+    top: calc(100% + #{$space-4});
     left: 0;
     margin-top: -$space-8;
     height: $space-32;
     width: 100%;
     content: ' ';
-    background-size: contain;
+    background-size: 100%;
     background-image: url("data:image/svg+xml,%3Csvg width='146' height='32' viewBox='0 0 146 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0)'%3E%3Cpath d='M-11.7809 10.9962C24.2609 4.34103 33.745 4.34405 16.6715 11.0053C-0.40207 17.6665 9.08205 17.6695 45.1238 11.0143C81.1656 4.35915 90.6497 4.36217 73.5762 11.0234C56.5026 17.6846 65.9868 17.6876 102.029 11.0325C138.07 4.37727 147.554 4.38029 130.481 11.0415C113.407 17.7027 122.891 17.7058 158.933 11.0506C194.975 4.39539 204.459 4.39841 187.386 11.0596C170.312 17.7209 179.796 17.7239 215.838 11.0687C251.88 4.41351 261.364 4.41653 244.29 11.0778C227.217 17.739 236.701 17.742 272.743 11.0868C308.784 4.43163 318.269 4.43465 301.195 11.0959C284.121 17.7571 293.606 17.7601 329.647 11.1049C365.689 4.44975 375.173 4.45277 358.1 11.114C341.026 17.7752 350.51 17.7782 386.552 11.1231C422.594 4.46787 432.078 4.47089 415.004 11.1321' stroke='%23CF508D' stroke-width='4'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0'%3E%3Crect width='145.755' height='31.2482' fill='white' transform='translate(0.00976562) rotate(0.0182447)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
+    z-index: 1;
   }
 }
 
