--- a/.vuesion/generators/page/page.vue.hbs
+++ b/.vuesion/generators/page/page.vue.hbs
@@ -47,6 +47,6 @@ export default defineComponent({
 @import '~@/assets/design-system';
 
 .{{ camelCase componentName }} {
-  margin-top: $navbar-height;
+  padding-top: $navbar-height;
 }
 </style>
