refactor(tokens): rename --a11y-color to --a11y-default-color

--- a/src/assets/design-system/variables/components/_common.scss
+++ b/src/assets/design-system/variables/components/_common.scss
@@ -4,7 +4,7 @@ $input-control-md-height: $space-40;
 $input-control-lg-height: $space-40 + $space-4;
 
 @include add-theme-variable(
-  'a11y-color',
+  'a11y-default-color',
   (
     'light': var(--brand-text-inverse-high),
     'dark': var(--brand-text-default-high),
