--- a/src/assets/design-system/variables/components/data-display/_menu.scss
+++ b/src/assets/design-system/variables/components/data-display/_menu.scss
@@ -14,6 +14,7 @@ $menu-item-bg-active: var(--brand-interaction-primary-hovered);
 $menu-item-color-active: var(--brand-text-inverse-high);
 $menu-item-icon-size: $space-20;
 $menu-item-icon-size-gap: $space-8;
+$menu-item-disabled-opacity: 0.6;
 
 // separator
 $menu-separator-border: 1px solid var(--brand-border-default-low);
