--- a/.vuesion/generators/vuex-module/actions.ts.hbs
+++ b/.vuesion/generators/vuex-module/actions.ts.hbs
@@ -33,3 +33,5 @@ export const {{ properCase singularName }}Actions: I{{ properCase singularName }
     commit('DELETE_{{ constantCase singularName }}', user);
   },
 };
+
+export default {{ properCase singularName }}Actions;
