--- a/.vuesion/generators/vuex-module/getters.ts.hbs
+++ b/.vuesion/generators/vuex-module/getters.ts.hbs
@@ -14,3 +14,5 @@ export const {{ properCase singularName }}Getters: I{{ properCase singularName }
     return state.current{{ properCase singularName }};
   },
 };
+
+export default {{ properCase singularName }}Getters;
