--- a/.vuesion/generators/vuex-module/mutations.ts.hbs
+++ b/.vuesion/generators/vuex-module/mutations.ts.hbs
@@ -28,3 +28,5 @@ export const {{ properCase singularName }}Mutations: I{{ properCase singularName
     state.{{ camelCase pluralName }}.splice(idx, 1);
   },
 };
+
+export default {{ properCase singularName }}Mutations;
