--- a/.vuesion/generators/vuex-module/state.ts.hbs
+++ b/.vuesion/generators/vuex-module/state.ts.hbs
@@ -19,3 +19,5 @@ export const {{ properCase singularName }}DefaultState = (): I{{ properCase sing
     current{{ properCase singularName }}: null,
   };
 };
+
+export default {{ properCase singularName }}DefaultState;
